--- a/training.ipynb
+++ b/training.ipynb
@@ -1,11 +1,65 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "# Models \n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "from sklearn.gaussian_process import GaussianProcessClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "# Data Processing\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "from scipy.stats import entropy\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# MLP\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout\n",
+    "\n",
+    "# Model Processing\n",
+    "from sklearn.dummy import DummyClassifier\n",
+    "from sklearn.metrics import fbeta_score, make_scorer\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold, cross_val_score\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from imblearn.pipeline import Pipeline as imblearnPipeline\n",
+    "from sklearn.preprocessing import PowerTransformer\n",
+    "\n",
+    "from tensorflow.keras.wrappers.scikit_learn import KerasClassifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +69,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.15"
   }
  },
