--- a/training.ipynb
+++ b/training.ipynb
@@ -60,6 +60,140 @@
    "source": [
     "# Functions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def spot_check_models(X,y):\n",
+    "    \"\"\"\n",
+    "    This a quick way to spot check relevant algorithms to gain an understanding of \n",
+    "    the dataset and which models handle the distribution well.\n",
+    "\n",
+    "    Args:\n",
+    "    X: Pd.Dataframe\n",
+    "    y: Pd.Series\n",
+    "\n",
+    "    Returns:\n",
+    "        _type_: Sorted dataframe on accuracy scores.\n",
+    "    \"\"\"\n",
+    "    models = {\n",
+    "        \n",
+    "        \"GaussianNB\": GaussianNB(),\n",
+    "        \"LDA\":LinearDiscriminantAnalysis(),\n",
+    "        \"GPC\":GaussianProcessClassifier(),\n",
+    "        \n",
+    "        \"LogisticRegression\": LogisticRegression(),\n",
+    "        \"SVC\": SVC(),\n",
+    "        \"KNeighborsClassifier\": KNeighborsClassifier(),\n",
+    "        \n",
+    "        \"DecisionTreeClassifier\": DecisionTreeClassifier(random_state=42),\n",
+    "        \"RandomForestClassifier\": RandomForestClassifier(random_state=42),\n",
+    "        \"GradientBoostingClassifier\": GradientBoostingClassifier(random_state=42),\n",
+    "        \"XGB\":XGBClassifier()\n",
+    "    }\n",
+    "    \n",
+    "    X_train, X_test, y_train_encoded, y_test_encoded = train_test_split(X,y, test_size=0.3, random_state=42)\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train_scaled, X_test_scaled = scaler.fit_transform(X_train), scaler.transform(X_test)\n",
+    "    # Create an empty DataFrame to store model performance\n",
+    "    model_performance = []\n",
+    "\n",
+    "    for name, model in models.items():\n",
+    "        model.fit(X_train_scaled, y_train_encoded)\n",
+    "        predictions = model.predict(X_test_scaled)\n",
+    "        accuracy = accuracy_score(y_test_encoded, predictions)\n",
+    "        model_performance.append({\n",
+    "            \"Model\": name,\n",
+    "            \"Accuracy\": accuracy\n",
+    "        })\n",
+    "\n",
+    "    # For the Sequential model\n",
+    "    sequential_model = Sequential()\n",
+    "    sequential_model.add(Dense(64, input_dim=X_train_scaled.shape[1], activation='relu'))\n",
+    "    sequential_model.add(Dense(32, activation='relu'))\n",
+    "    sequential_model.add(Dense(1, activation='sigmoid'))\n",
+    "    sequential_model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "    sequential_model.fit(X_train_scaled, y_train_encoded, epochs=50, batch_size=10, verbose=0)\n",
+    "    loss, accuracy = sequential_model.evaluate(X_test_scaled, y_test_encoded)\n",
+    "    model_performance.append({\n",
+    "        \"Model\": \"Sequential\",\n",
+    "        \"Accuracy\": accuracy\n",
+    "    })\n",
+    "\n",
+    "    # Convert the model_performance to a DataFrame\n",
+    "    performance_df = pd.DataFrame(model_performance)\n",
+    "    return performance_df.sort_values(by=\"Accuracy\", ascending=False)\n",
+    "\n",
+    "\n",
+    "def get_selected_models(names):\n",
+    "  \"\"\"\n",
+    "  Returns selected models for ML processing\n",
+    "\n",
+    "  Args:\n",
+    "      names (_type_):List\n",
+    "\n",
+    "  Returns:\n",
+    "      List of models\n",
+    "  \"\"\"\n",
+    "  models = {\n",
+    "    \"LDA\": LinearDiscriminantAnalysis(),\n",
+    "    \"GPC\": GaussianProcessClassifier(),\n",
+    "    \"GNB\": GaussianNB(),\n",
+    "    \"SVC\": SVC(),\n",
+    "    \"LR\":LogisticRegression(max_iter=1000),\n",
+    "    \"KNN\": KNeighborsClassifier(),\n",
+    "    \"DTC\": DecisionTreeClassifier(),\n",
+    "    \"GBC\":GradientBoostingClassifier(),\n",
+    "    \"RFC\":RandomForestClassifier(),\n",
+    "    \"XGB\": XGBClassifier()\n",
+    "  }\n",
+    "  \n",
+    "  return [models[model] for model in names]\n",
+    "\n",
+    "def evaluate_model(X, y, model):\n",
+    "  # define evaluation procedure\n",
+    "  cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "  \n",
+    "  metric = make_scorer(accuracy_score)\n",
+    "  # evaluate model\n",
+    "  scores = cross_val_score(model, X, y, scoring=metric, cv=cv, n_jobs=-1)\n",
+    "  return scores\n",
+    "\n",
+    "def labels_to_probabilities(y):\n",
+    "    values, counts = np.unique(y, return_counts=True)\n",
+    "    probabilities = counts / counts.sum()\n",
+    "    return probabilities\n",
+    "\n",
+    "def calculate_entropy(df:pd.DataFrame)-> pd.DataFrame:\n",
+    "  \"\"\"_summary_\n",
+    "\n",
+    "  Args:\n",
+    "      df (pd.DataFrame): Pandas DataFrame\n",
+    "\n",
+    "  Returns:\n",
+    "      pd.DataFrame: THe Entropy level of all models\n",
+    "  \"\"\"\n",
+    "\n",
+    "  column_entropy_info = {}\n",
+    "  for col in df.columns:\n",
+    "    probabilities = labels_to_probabilities(df[col])\n",
+    "    entropy_value = entropy(probabilities, base=2)\n",
+    "    column_entropy_info[col] = {\n",
+    "          'entropy': entropy_value\n",
+    "      }\n",
+    "\n",
+    "  return pd.DataFrame(column_entropy_info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EDA Analysis"
+   ]
   }
  ],
  "metadata": {
