added new models

--- a/training.ipynb
+++ b/training.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,16 @@
     "          'entropy': entropy_value\n",
     "      }\n",
     "\n",
-    "  return pd.DataFrame(column_entropy_info)"
+    "  return pd.DataFrame(column_entropy_info)\n",
+    "\n",
+    "def check_class_imbalance(df):\n",
+    "  \n",
+    "  y = df.values[:,-1]\n",
+    "  counter = Counter(y)\n",
+    "  \n",
+    "  for k,v in counter.items():\n",
+    "    per = v/len(y) * 100\n",
+    "    print(\"Class=%d, Count=%d, Percentage=%.3f%%\" % (k,v, per))"
    ]
   },
   {
@@ -193,6 +202,283 @@
    "metadata": {},
    "source": [
     "# EDA Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cap-diameter</th>\n",
+       "      <th>cap-shape</th>\n",
+       "      <th>gill-attachment</th>\n",
+       "      <th>gill-color</th>\n",
+       "      <th>stem-height</th>\n",
+       "      <th>stem-width</th>\n",
+       "      <th>stem-color</th>\n",
+       "      <th>season</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1372</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3.807467</td>\n",
+       "      <td>1545</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1.804273</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1461</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3.807467</td>\n",
+       "      <td>1557</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1.804273</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1371</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3.612496</td>\n",
+       "      <td>1566</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1.804273</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1261</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3.787572</td>\n",
+       "      <td>1566</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1.804273</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1305</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3.711971</td>\n",
+       "      <td>1464</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.943195</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54030</th>\n",
+       "      <td>73</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.887740</td>\n",
+       "      <td>569</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.943195</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54031</th>\n",
+       "      <td>82</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.186164</td>\n",
+       "      <td>490</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.943195</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54032</th>\n",
+       "      <td>82</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.915593</td>\n",
+       "      <td>584</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.888450</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54033</th>\n",
+       "      <td>79</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.034963</td>\n",
+       "      <td>491</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.888450</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54034</th>\n",
+       "      <td>72</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.158311</td>\n",
+       "      <td>492</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.888450</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>54035 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       cap-diameter  cap-shape  gill-attachment  gill-color  stem-height  \\\n",
+       "0              1372          2                2          10     3.807467   \n",
+       "1              1461          2                2          10     3.807467   \n",
+       "2              1371          2                2          10     3.612496   \n",
+       "3              1261          6                2          10     3.787572   \n",
+       "4              1305          6                2          10     3.711971   \n",
+       "...             ...        ...              ...         ...          ...   \n",
+       "54030            73          5                3           2     0.887740   \n",
+       "54031            82          2                3           2     1.186164   \n",
+       "54032            82          5                3           2     0.915593   \n",
+       "54033            79          2                3           2     1.034963   \n",
+       "54034            72          5                3           2     1.158311   \n",
+       "\n",
+       "       stem-width  stem-color    season  class  \n",
+       "0            1545          11  1.804273      1  \n",
+       "1            1557          11  1.804273      1  \n",
+       "2            1566          11  1.804273      1  \n",
+       "3            1566          11  1.804273      1  \n",
+       "4            1464          11  0.943195      1  \n",
+       "...           ...         ...       ...    ...  \n",
+       "54030         569          12  0.943195      1  \n",
+       "54031         490          12  0.943195      1  \n",
+       "54032         584          12  0.888450      1  \n",
+       "54033         491          12  0.888450      1  \n",
+       "54034         492          12  0.888450      1  \n",
+       "\n",
+       "[54035 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"/Users/test/Documents/Software-projects/Python Projects/Machine Learning Projects/Mushroon-Classification-Accuracy/mushroom_cleaned.csv\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check for Nulls and Duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of the nulls: cap-diameter       0\n",
+      "cap-shape          0\n",
+      "gill-attachment    0\n",
+      "gill-color         0\n",
+      "stem-height        0\n",
+      "stem-width         0\n",
+      "stem-color         0\n",
+      "season             0\n",
+      "class              0\n",
+      "dtype: int64\n",
+      "Number of duplicates: 303\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Sum of the nulls: {df.isna().sum()}\")\n",
+    "print(f\"Number of duplicates: {df.duplicated().sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop_duplicates(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class=1, Count=29372, Percentage=54.664%\n",
+      "Class=0, Count=24360, Percentage=45.336%\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_class_imbalance(df)"
    ]
   }
  ],
