added new models

--- a/training.ipynb
+++ b/training.ipynb
@@ -559,11 +559,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split up feature variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X,y = df.drop(\"class\",axis=1), df[\"class\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Baseline Model Evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = DummyClassifier(strategy=\"uniform\")\n",
+    "scores = evaluate_model(X,y)"
+   ]
   }
  ],
  "metadata": {
