added new models

--- a/training.ipynb
+++ b/training.ipynb
@@ -583,12 +583,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">0.500 (0.007)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = DummyClassifier(strategy=\"uniform\")\n",
+    "scores = evaluate_model(X,y, model)\n",
+    "print('>%.3f (%.3f)' % (np.mean(scores), np.std(scores)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spot check Algorithms"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = DummyClassifier(strategy=\"uniform\")\n",
-    "scores = evaluate_model(X,y)"
+    "spot_check_models(X, y)"
    ]
   }
  ],
