--- a/training.ipynb
+++ b/training.ipynb
@@ -48,7 +48,6 @@
     "from sklearn.metrics import fbeta_score, make_scorer\n",
     "from sklearn.model_selection import RepeatedStratifiedKFold, cross_val_score\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from imblearn.pipeline import Pipeline as imblearnPipeline\n",
     "from sklearn.preprocessing import PowerTransformer\n",
     "\n",
     "from tensorflow.keras.wrappers.scikit_learn import KerasClassifier"
@@ -609,9 +608,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "spot_check_models(X, y)"
    ]
