--- a/training.ipynb
+++ b/training.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,23 @@
     "  \n",
     "  for k,v in counter.items():\n",
     "    per = v/len(y) * 100\n",
-    "    print(\"Class=%d, Count=%d, Percentage=%.3f%%\" % (k,v, per))"
+    "    print(\"Class=%d, Count=%d, Percentage=%.3f%%\" % (k,v, per))\n",
+    "\n",
+    "def testing_selected_models(names:list, models:list, X:pd.DataFrame, y:pd.Series):\n",
+    "    \"\"\"\n",
+    "    Runs multiple subsets on folds of data\n",
+    "\n",
+    "    Args:\n",
+    "        names (list): _description_\n",
+    "        models (list): _description_\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    for i in range(len(models)):\n",
+    "        pipeline = Pipeline(steps=[('scaler', StandardScaler()), (\"power_tranformer\",PowerTransformer()), ('model', models[i])])\n",
+    "        # Evaluate the model\n",
+    "        scores = evaluate_model(X, y, pipeline)\n",
+    "        # summarize and store\n",
+    "        print('>%s %.3f (%.3f)' % (names[i], np.mean(scores), np.std(scores)))"
    ]
   },
   {
@@ -610,9 +626,147 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-22 20:14:35.858648: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "94/94 [==============================] - 0s 388us/step - loss: 0.0356 - accuracy: 0.9850\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>KNeighborsClassifier</td>\n",
+       "      <td>0.988333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>XGB</td>\n",
+       "      <td>0.987333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>RandomForestClassifier</td>\n",
+       "      <td>0.986667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Sequential</td>\n",
+       "      <td>0.985000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GPC</td>\n",
+       "      <td>0.979667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>DecisionTreeClassifier</td>\n",
+       "      <td>0.975000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SVC</td>\n",
+       "      <td>0.965333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>GradientBoostingClassifier</td>\n",
+       "      <td>0.959333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LDA</td>\n",
+       "      <td>0.756667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.751000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GaussianNB</td>\n",
+       "      <td>0.636000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Model  Accuracy\n",
+       "5         KNeighborsClassifier  0.988333\n",
+       "9                          XGB  0.987333\n",
+       "7       RandomForestClassifier  0.986667\n",
+       "10                  Sequential  0.985000\n",
+       "2                          GPC  0.979667\n",
+       "6       DecisionTreeClassifier  0.975000\n",
+       "4                          SVC  0.965333\n",
+       "8   GradientBoostingClassifier  0.959333\n",
+       "1                          LDA  0.756667\n",
+       "3           LogisticRegression  0.751000\n",
+       "0                   GaussianNB  0.636000"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spot_check_models(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Advanced Model Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = [\"GPC\", \"SVC\", \"KNN\", \"DTC\", \"RFC\", \"XGB\", \"GBC\"]\n",
+    "models = get_selected_models(names)\n",
+    "\n",
+    "testing_selected_models(names, models, X, y)"
    ]
   }
  ],
