added new models

--- a/training.ipynb
+++ b/training.ipynb
@@ -759,9 +759,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">GPC 0.921 (0.014)\n",
+      ">SVC 0.926 (0.017)\n",
+      ">KNN 0.927 (0.017)\n",
+      ">DTC 0.933 (0.016)\n",
+      ">RFC 0.953 (0.012)\n",
+      ">XGB 0.949 (0.014)\n",
+      ">GBC 0.952 (0.014)\n"
+     ]
+    }
+   ],
    "source": [
     "names = [\"GPC\", \"SVC\", \"KNN\", \"DTC\", \"RFC\", \"XGB\", \"GBC\"]\n",
     "models = get_selected_models(names)\n",
